--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,30 +1,29 @@
 <div class="container text-color">
-
-  <div class="container mt-5">
-    <div class="row col-11" style="margin: auto;">
-      <div class="col-12 col-md-3 mb-3 mb-md-0">
-        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>-
-      </div>
-      <div class="col-12 col-md-8">
-        <div style="font-weight: bold; font-size: 50px;">
-          <%= @user.name %>
-        </div>
-        <div style="font-size: 20px;">
-          <%= @user.bio %>
-        </div>
-        <div class="text-end mt-4">
-          <%= link_to '退会 <i class="fa-solid fa-right-from-bracket"></i>'.html_safe, admin_user_path, class: "btn btn-outline-danger button",
+  <table style="margin: auto; border: none;">
+    <tr>
+      <td colspan="3" style="text-align: center;">
+        <%= image_tag @user.get_profile_image(150, 150), class: "rounded-circle" %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3" style="text-align: center; font-weight: bold; font-size: 50px;">
+        <%= @user.name %>
+      </td>
+    </tr>
+    <tr>
+      <td class="text-center">
+        <%= link_to '退会 <i class="fa-solid fa-right-from-bracket"></i>'.html_safe, admin_user_path, class: "btn btn-outline-danger button",
           style: "border-radius: 25px;", method: :delete, data: { confirm: "本当に退会しますか？" } %>
-        </div>
-      </div>
-    </div>
-  </div>
+      </td>
+    </tr>
+  </table>
+</div>
 
   <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
     プロフィール
   </div>
 
-  <table class="table col-10" style="margin: auto;">
+  <table class="table" style="margin: auto; width: 50%; max-width: 800px;">
     <tbody class="text-color">
       <tr style="line-height: 2; vertical-align: middle;">
         <td style="font-size: 15px;"><strong>性別</strong></td>
@@ -71,22 +70,24 @@
     投稿一覧
   </div>
 
-  <table style="width: 70%; margin: auto; margin-top: 20px;" >
+  <table style="width: 60%; margin: auto; margin-top: 20px;" >
     <tbody class="text-color">
       <% @posts.each do |post| %>
       <tr>
         <td>
           <%= link_to admin_user_path(post.user) do %>
-          <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
-          <span style="color: #33231d; font-weight: bold; margin-left: 3px;"><%= post.user.name %></span>
+            <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
           <% end %>
         </td>
-        <td style="font-weight: bold; font-size: 20px">
-          <%= link_to post.title, admin_post_path(post.id), style: "color: #33231d;" %>
+        <td>
+          <div><%= post.user.name %></div>
+          <div style="font-weight: bold; font-size: 20px">
+            <%= link_to post.title, admin_post_path(post.id), style: "color: #33231d;" %>
+          </div>
         </td>
         <td>
-          <i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %>
-          <i class="fa-regular fa-comment-dots mr-1"></i><%= post.post_comments.count %>
+          <div><i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %></div>
+          <div><i class="fa-regular fa-comment-dots mr-1"></i><%= post.post_comments.count %></div>
         </td>
       </tr>
       <tr><td colspan="2" style="height: 10px;"></td></tr>
