--- a/app/views/user/users/followings.html.erb
+++ b/app/views/user/users/followings.html.erb
@@ -1,6 +1,6 @@
 <div class="followers-box shadow-lg"
      style="margin: auto; border-radius: 25px; overflow: hidden; margin-top: 70px; overflow-y: auto;">
-  <p class="text-center" style="font-weight: bold; font-size: 20px;">フォロー中</p>
+  <p class="text-center" style="font-weight: bold; font-size: 20px; color: #33231d;">フォロー中</p>
 
   <% @users.each do |user| %>
     <div style="display: flex; align-items: center; justify-content: space-between; margin: 5px 0;">
